# trabalho-1-oscarkemuel

./: CMakeLists.txt  README.md  autor.md
data/: bets.txt  test1.txt  test2.txt  test3.txt  test4.txt
include/: kenobet.hpp
src/: kenobet.cpp  main.cpp
